update(backend): update to match the change of rewired controller and service